[gd_scene load_steps=21 format=2]

[ext_resource path="res://Enemy/Devil/idleDemonSprite.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Devil/walkCycleDemonSprite.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Devil/FireAttackDemonSprite.png" type="Texture" id=3]
[ext_resource path="res://Enemy/Devil/DemonDeathSprite.png" type="Texture" id=4]
[ext_resource path="res://Enemy/Devil/DemonPunchSprite.png" type="Texture" id=5]
[ext_resource path="res://Enemy/Devil/HitstunDemon.png" type="Texture" id=6]
[ext_resource path="res://Enemy/Devil/Demon.gd" type="Script" id=7]
[ext_resource path="res://User Interface/UI Elements/MinionHealthBar.png" type="Texture" id=8]
[ext_resource path="res://Misc/healthBarProgress.png" type="Texture" id=9]
[ext_resource path="res://Sounds/Woosh_3.ogg" type="AudioStream" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.4207
height = 46.6135

[sub_resource type="CapsuleShape2D" id=2]
radius = 19.7907
height = 34.7756

[sub_resource type="Animation" id=5]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 2, 20, 48, 75 ), Rect2( 62, 18, 43, 77 ), Rect2( 112, 33, 59, 65 ), Rect2( 183, 44, 80, 48 ), Rect2( 275, 58, 91, 35 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -37 ), Vector2( 0, -33 ), Vector2( 0, -24 ), Vector2( 0, -18 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fire"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 9, 12, 48, 75 ), Rect2( 60, 12, 56, 75 ), Rect2( 129, 12, 74, 75 ), Rect2( 211, 12, 86, 75 ), Rect2( 129, 12, 74, 75 ), Rect2( 211, 12, 86, 75 ), Rect2( 60, 12, 56, 75 ), Rect2( 4, 12, 48, 75 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -37 ), Vector2( 10, -37 ), Vector2( 15, -37 ), Vector2( 10, -37 ), Vector2( 15, -37 ), Vector2( 0, -37 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/AttackArea/Fire:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 16, 12, 48, 75 ), Rect2( 87, 12, 48, 75 ), Rect2( 158, 12, 53, 75 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -37 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Punch"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 15, 8, 38, 80 ), Rect2( 86, 12, 42, 76 ), Rect2( 151, 12, 48, 76 ), Rect2( 86, 12, 42, 76 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -37 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/AttackArea/Punch:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Stun"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 27, 8, 43, 80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -37 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 35, 13, 48, 75 ), Rect2( 109, 13, 48, 76 ), Rect2( 186, 10, 48, 78 ), Rect2( 263, 12, 48, 76 ), Rect2( 332, 11, 48, 76 ), Rect2( 396, 13, 48, 76 ), Rect2( 470, 10, 48, 78 ), Rect2( 541, 12, 48, 76 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -37 ) ]
}

[sub_resource type="RectangleShape2D" id=8]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 15.8651, 5.15247 )

[node name="Demon" type="KinematicBody2D"]
position = Vector2( 0, -0.5 )
script = ExtResource( 7 )

[node name="DemonHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2147483650

[node name="Hitbox" type="CollisionShape2D" parent="DemonHitbox"]
position = Vector2( 0, -41.2624 )
shape = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="DemonHitbox"]
position = Vector2( -1.25992, -34.9628 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 5 )
anims/Fire = SubResource( 6 )
anims/Idle = SubResource( 3 )
anims/Punch = SubResource( 7 )
anims/Stun = SubResource( 10 )
anims/Walk = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -37 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 27, 8, 43, 80 )

[node name="AttackArea" type="Area2D" parent="Sprite"]
collision_layer = 2

[node name="Punch" type="CollisionShape2D" parent="Sprite/AttackArea"]
position = Vector2( 16.694, 0 )
shape = SubResource( 8 )
disabled = true

[node name="Fire" type="CollisionShape2D" parent="Sprite/AttackArea"]
position = Vector2( 20.8344, -14.1741 )
shape = SubResource( 9 )
disabled = true

[node name="attackCooldown" type="Timer" parent="."]

[node name="enemy" type="Node" parent="."]

[node name="Health" type="TextureRect" parent="."]
margin_left = -28.6607
margin_top = -82.95
margin_right = 65.3393
margin_bottom = -52.95
rect_scale = Vector2( 0.655511, 0.843626 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="Health"]
margin_left = 3.0
margin_top = 2.0
margin_right = 603.0
margin_bottom = 76.0
rect_scale = Vector2( 0.146269, 0.0782239 )
value = 100.0
texture_progress = ExtResource( 9 )
fill_mode = 1
tint_progress = Color( 0.501961, 0.0705882, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="area_entered" from="Sprite/AttackArea" to="." method="_on_AttackArea_area_entered"]
